cmake_minimum_required(VERSION 3.16)
project(qt6binding)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Core Widgets)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

# Qt MOC headers
set(MOC_HEADERS
    src/QApplication/QApplicationBind.h
    src/QCheckBox/QCheckBoxBind.h
    src/QCheckBox/QCheckBoxHandler.h
    src/QColor/QColorBind.h
    src/QColorSpace/QColorSpaceBind.h
    src/QTimer/QTimerBind.h
    src/QTimer/QTimerHandler.h
    src/QComboBox/QComboBoxBind.h
    src/QComboBox/QComboBoxHandler.h
    src/QCoreApplication/QCoreApplicationBind.h
    src/QCursor/QCursorBind.h
    src/QDateEdit/QDateEditBind.h
    src/QDateEdit/QDateEditHandler.h
    src/QDateTimeEdit/QDateTimeEditBind.h
    src/QDateTimeEdit/QDateTimeEditHandler.h
    src/QDial/QDialBind.h
    src/QDial/QDialHandler.h
    src/QDockWidget/QDockWidgetBind.h
    src/QDockWidget/QDockWidgetHandler.h
    src/QDoubleSpinBox/QDoubleSpinBoxBind.h
    src/QDoubleSpinBox/QDoubleSpinBoxHandler.h
    src/QGraphicsView/QGraphicsViewBind.h
    src/QGraphicsView/QGraphicsViewHandler.h
    src/QGraphicsWidget/QGraphicsWidgetBind.h
    src/QGraphicsWidget/QGraphicsWidgetHandler.h
    src/QGridLayout/QGridLayoutBind.h
    src/QGuiApplication/QGuiApplicationBind.h
    src/QGroupBox/QGroupBoxBind.h
    src/QGroupBox/QGroupBoxHandler.h
    src/QHBoxLayout/QHBoxLayoutBind.h
    src/QLabel/QLabelBind.h
    src/QLCDNumber/QLCDNumberBind.h
    src/QLCDNumber/QLCDNumberHandler.h
    src/QLineEdit/QLineEditBind.h
    src/QLineEdit/QLineEditHandler.h
    src/QListView/QListViewBind.h
    src/QListView/QListViewHandler.h
    src/QListView/QListViewHandler.h
    src/QMainWindow/QMainWindowBind.h
    src/QMdiArea/QMdiAreaBind.h
    src/QMdiArea/QMdiAreaHandler.h
    src/QMdiSubWindow/QMdiSubWindowBind.h
    src/QMdiSubWindow/QMdiSubWindowHandler.h
    src/QMenu/QMenuBind.h
    src/QMenu/QMenuHandler.h
    src/QMenuBar/QMenuBarBind.h
    src/QMenuBar/QMenuBarHandler.h
    src/QProgressBar/QProgressBarBind.h
    src/QProgressBar/QProgressBarHandler.h
    src/QPushButton/QPushButtonBind.h
    src/QPushButton/QPushButtonHandler.h
    src/QRadioButton/QRadioButtonBind.h
    src/QRadioButton/QRadioButtonHandler.h
    src/QScrollArea/QScrollAreaBind.h
    src/QScrollArea/QScrollAreaHandler.h
    src/QScrollBar/QScrollBarBind.h
    src/QScrollBar/QScrollBarHandler.h
    src/QSizeGrip/QSizeGripBind.h
    src/QSlider/QSliderBind.h
    src/QSplitter/QSplitterBind.h
    src/QSplitter/QSplitterHandler.h
    src/QSplitterHandle/QSplitterHandleBind.h
    src/QSplitterHandle/QSplitterHandleHandler.h
    src/QStackedWidget/QStackedWidgetBind.h
    src/QStackedWidget/QStackedWidgetHandler.h
    src/QSlider/QSliderHandler.h
    src/QSpinBox/QSpinBoxBind.h
    src/QSpinBox/QSpinBoxHandler.h
    src/QStandardItem/QStandardItemBind.h
    src/QStandardItemModel/QStandardItemModelBind.h
    src/QStatusBar/QStatusBarBind.h
    src/QStringListModel/QStringListModelBind.h
    src/QStyle/QStyleBind.h
    src/QTabBar/QTabBarBind.h
    src/QTabBar/QTabBarHandler.h
    src/QTableView/QTableViewBind.h
    src/QTableView/QTableViewHandler.h
    src/QTabWidget/QTabWidgetBind.h
    src/QTabWidget/QTabWidgetHandler.h
    src/QTextEdit/QTextEditBind.h
    src/QTextEdit/QTextEditHandler.h
    src/QToolBar/QToolBarBind.h
    src/QToolBar/QToolBarHandler.h
    src/QToolBox/QToolBoxBind.h
    src/QToolBox/QToolBoxHandler.h
    src/QToolButton/QToolButtonBind.h
    src/QToolButton/QToolButtonHandler.h
    src/QTreeView/QTreeViewBind.h
    src/QTreeView/QTreeViewHandler.h
    src/QVBoxLayout/QVBoxLayoutBind.h
    src/QWidget/QWidgetBind.h
    src/QObject/QObjectBind.h
    src/QPaintDevice/QPaintDeviceBind.h
    src/QPoint/QPointBind.h
    src/QPointF/QPointFBind.h
    src/QString/QStringBind.h
    src/QString/QStringHandler.h
    src/QVariant/QVariantBind.h
    src/QVariant/QVariantHandler.h
)

add_library(qt6binding SHARED
    ${MOC_HEADERS}
    src/QApplication/QApplicationBind.cpp
    src/QApplication/QApplicationCAPI.cpp
    src/QCheckBox/QCheckBoxBind.cpp
    src/QCheckBox/QCheckBoxCAPI.cpp
    src/QCheckBox/QCheckBoxHandler.cpp
    src/QTimer/QTimerBind.cpp
    src/QTimer/QTimerHandler.cpp
    src/QTimer/QTimerCAPI.cpp
    src/QColor/QColorBind.cpp
    src/QColor/QColorCAPI.cpp
    src/QColorSpace/QColorSpaceBind.cpp
    src/QColorSpace/QColorSpaceCAPI.cpp
    src/QComboBox/QComboBoxBind.cpp
    src/QComboBox/QComboBoxCAPI.cpp
    src/QComboBox/QComboBoxHandler.cpp
    src/QCoreApplication/QCoreApplicationBind.cpp
    src/QCoreApplication/QCoreApplicationCAPI.cpp
    src/QCursor/QCursorBind.cpp
    src/QCursor/QCursorCAPI.cpp
    src/QDateEdit/QDateEditBind.cpp
    src/QDateEdit/QDateEditHandler.cpp
    src/QDateEdit/QDateEditCAPI.cpp
    src/QDateTimeEdit/QDateTimeEditBind.cpp
    src/QDateTimeEdit/QDateTimeEditHandler.cpp
    src/QDateTimeEdit/QDateTimeEditCAPI.cpp
    src/QDial/QDialBind.cpp
    src/QDial/QDialHandler.cpp
    src/QDial/QDialCAPI.cpp
    src/QDockWidget/QDockWidgetBind.cpp
    src/QDockWidget/QDockWidgetHandler.cpp
    src/QDockWidget/QDockWidgetCAPI.cpp
    src/QDoubleSpinBox/QDoubleSpinBoxBind.cpp
    src/QDoubleSpinBox/QDoubleSpinBoxCAPI.cpp
    src/QDoubleSpinBox/QDoubleSpinBoxHandler.cpp
    src/QGraphicsView/QGraphicsViewBind.cpp
    src/QGraphicsView/QGraphicsViewHandler.cpp
    src/QGraphicsView/QGraphicsViewCAPI.cpp
    src/QGraphicsWidget/QGraphicsWidgetBind.cpp
    src/QGraphicsWidget/QGraphicsWidgetHandler.cpp
    src/QGraphicsWidget/QGraphicsWidgetCAPI.cpp
    src/QGuiApplication/QGuiApplicationBind.cpp
    src/QGuiApplication/QGuiApplicationCAPI.cpp
    src/QGridLayout/QGridLayoutBind.cpp
    src/QGridLayout/QGridLayoutCAPI.cpp
    src/QGroupBox/QGroupBoxBind.cpp
    src/QGroupBox/QGroupBoxCAPI.cpp
    src/QGroupBox/QGroupBoxHandler.cpp
    src/QHBoxLayout/QHBoxLayoutBind.cpp
    src/QHBoxLayout/QHBoxLayoutCAPI.cpp
    src/QLabel/QLabelBind.cpp
    src/QLabel/QLabelCAPI.cpp
    src/QLCDNumber/QLCDNumberBind.cpp
    src/QLCDNumber/QLCDNumberCAPI.cpp
    src/QLCDNumber/QLCDNumberHandler.cpp
    src/QLineEdit/QLineEditBind.cpp
    src/QLineEdit/QLineEditHandler.cpp
    src/QLineEdit/QLineEditCAPI.cpp
    src/QListView/QListViewBind.cpp
    src/QListView/QListViewCAPI.cpp
    src/QListView/QListViewHandler.cpp
    src/QMainWindow/QMainWindowBind.cpp
    src/QMainWindow/QMainWindowCAPI.cpp
    src/QMdiArea/QMdiAreaBind.cpp
    src/QMdiArea/QMdiAreaHandler.cpp
    src/QMdiArea/QMdiAreaCAPI.cpp
    src/QMdiSubWindow/QMdiSubWindowBind.cpp
    src/QMdiSubWindow/QMdiSubWindowHandler.cpp
    src/QMdiSubWindow/QMdiSubWindowCAPI.cpp
    src/QMenu/QMenuBind.cpp
    src/QMenu/QMenuCAPI.cpp
    src/QMenu/QMenuHandler.cpp
    src/QMenuBar/QMenuBarBind.cpp
    src/QMenuBar/QMenuBarCAPI.cpp
    src/QMenuBar/QMenuBarHandler.cpp
    src/QProgressBar/QProgressBarBind.cpp
    src/QProgressBar/QProgressBarCAPI.cpp
    src/QProgressBar/QProgressBarHandler.cpp
    src/QPushButton/QPushButtonBind.cpp
    src/QPushButton/QPushButtonHandler.cpp
    src/QPushButton/QPushButtonCAPI.cpp
    src/QRadioButton/QRadioButtonBind.cpp
    src/QRadioButton/QRadioButtonCAPI.cpp
    src/QRadioButton/QRadioButtonHandler.cpp
    src/QScrollArea/QScrollAreaBind.cpp
    src/QScrollArea/QScrollAreaCAPI.cpp
    src/QScrollArea/QScrollAreaHandler.cpp
    src/QScrollBar/QScrollBarBind.cpp
    src/QScrollBar/QScrollBarCAPI.cpp
    src/QScrollBar/QScrollBarHandler.cpp
    src/QSizeGrip/QSizeGripBind.cpp
    src/QSizeGrip/QSizeGripCAPI.cpp
    src/QSlider/QSliderBind.cpp
    src/QSplitter/QSplitterBind.cpp
    src/QSplitter/QSplitterHandler.cpp
    src/QSplitter/QSplitterCAPI.cpp
    src/QSplitterHandle/QSplitterHandleBind.cpp
    src/QSplitterHandle/QSplitterHandleHandler.cpp
    src/QSplitterHandle/QSplitterHandleCAPI.cpp
    src/QStackedWidget/QStackedWidgetBind.cpp
    src/QStackedWidget/QStackedWidgetHandler.cpp
    src/QStackedWidget/QStackedWidgetCAPI.cpp
    src/QSlider/QSliderCAPI.cpp
    src/QSlider/QSliderHandler.cpp
    src/QSpinBox/QSpinBoxBind.cpp
    src/QSpinBox/QSpinBoxCAPI.cpp
    src/QSpinBox/QSpinBoxHandler.cpp
    src/QStandardItem/QStandardItemBind.cpp
    src/QStandardItem/QStandardItemCAPI.cpp
    src/QStandardItemModel/QStandardItemModelBind.cpp
    src/QStandardItemModel/QStandardItemModelCAPI.cpp
    src/QStatusBar/QStatusBarBind.cpp
    src/QStatusBar/QStatusBarCAPI.cpp
    src/QStringListModel/QStringListModelBind.cpp
    src/QStringListModel/QStringListModelCAPI.cpp
    src/QStyle/QStyleBind.cpp
    src/QStyle/QStyleCAPI.cpp
    src/QTabBar/QTabBarBind.cpp
    src/QTabBar/QTabBarCAPI.cpp
    src/QTabBar/QTabBarHandler.cpp
    src/QTableView/QTableViewBind.cpp
    src/QTableView/QTableViewCAPI.cpp
    src/QTableView/QTableViewHandler.cpp
    src/QTabWidget/QTabWidgetBind.cpp
    src/QTabWidget/QTabWidgetCAPI.cpp
    src/QTabWidget/QTabWidgetHandler.cpp
    src/QTextEdit/QTextEditBind.cpp
    src/QTextEdit/QTextEditCAPI.cpp
    src/QTextEdit/QTextEditHandler.cpp
    src/QToolBar/QToolBarBind.cpp
    src/QToolBar/QToolBarCAPI.cpp
    src/QToolBar/QToolBarHandler.cpp
    src/QToolBox/QToolBoxBind.cpp
    src/QToolBox/QToolBoxCAPI.cpp
    src/QToolBox/QToolBoxHandler.cpp
    src/QToolButton/QToolButtonBind.cpp
    src/QToolButton/QToolButtonCAPI.cpp
    src/QToolButton/QToolButtonHandler.cpp
    src/QTreeView/QTreeViewBind.cpp
    src/QTreeView/QTreeViewCAPI.cpp
    src/QTreeView/QTreeViewHandler.cpp
    src/QVBoxLayout/QVBoxLayoutBind.cpp
    src/QVBoxLayout/QVBoxLayoutCAPI.cpp
    src/QWidget/QWidgetBind.cpp
    src/QWidget/QWidgetCAPI.cpp
    src/QObject/QObjectBind.cpp
    src/QObject/QObjectHandler.cpp
    src/QObject/QObjectCAPI.cpp
    src/QPaintDevice/QPaintDeviceBind.cpp
    src/QPaintDevice/QPaintDeviceCAPI.cpp
    src/QPoint/QPointBind.cpp
    src/QPoint/QPointCAPI.cpp
    src/QPointF/QPointFBind.cpp
    src/QPointF/QPointFCAPI.cpp
    src/QString/QStringBind.cpp
    src/QString/QStringHandler.cpp
    src/QString/QStringCAPI.cpp
    src/QVariant/QVariantBind.cpp
    src/QVariant/QVariantHandler.cpp
    src/QVariant/QVariantCAPI.cpp
)

target_include_directories(qt6binding PUBLIC include include/qt6 src)
target_link_libraries(qt6binding PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets)

add_subdirectory(example)
add_subdirectory(demo)
