add_subdirectory(qwidget)
add_subdirectory(qpushbutton)
add_subdirectory(qlineedit)
add_subdirectory(qcheckbox)
add_subdirectory(qdatetime)
add_subdirectory(qlayout)
add_subdirectory(qmainwindow)
add_subdirectory(qmdi)
add_subdirectory(qdockwidget)
add_subdirectory(qcombobox)
add_subdirectory(qlistview)
add_subdirectory(qtabbar)
add_subdirectory(qtabwidget)
add_subdirectory(qmenu)
add_subdirectory(qmenubar)
add_subdirectory(qprogressbar)
add_subdirectory(qslider)
add_subdirectory(qradiobutton)
add_subdirectory(qspinbox)
add_subdirectory(qscrollbar)
add_subdirectory(qscrollarea)
add_subdirectory(qtextedit)
add_subdirectory(qdoublespinbox)
add_subdirectory(qtoolbox)
add_subdirectory(qtoolbar)
add_subdirectory(qtreeview)
