add_subdirectory(qcheckbox)
add_subdirectory(qcolor)
add_subdirectory(qcolorspace)
add_subdirectory(qpoint)
add_subdirectory(qcombobox)
add_subdirectory(qcursor)
add_subdirectory(qdatetime)
add_subdirectory(qdockwidget)
add_subdirectory(qdoublespinbox)
add_subdirectory(qgroupbox)
add_subdirectory(qlayout)
add_subdirectory(qlcdnumber)
add_subdirectory(qlineedit)
add_subdirectory(qlistview)
add_subdirectory(qmainwindow)
add_subdirectory(qmdi)
add_subdirectory(qmenu)
add_subdirectory(qmenubar)
add_subdirectory(qobject)
add_subdirectory(qprogressbar)
add_subdirectory(qpushbutton)
add_subdirectory(qradiobutton)
add_subdirectory(qscrollarea)
add_subdirectory(qscrollbar)
add_subdirectory(qsizegrip)
add_subdirectory(qslider)
add_subdirectory(qspinbox)
add_subdirectory(qsplitter)
add_subdirectory(qstackedwidget)
add_subdirectory(qtabbar)
add_subdirectory(qtableview)
add_subdirectory(qtabwidget)
add_subdirectory(qtextedit)
add_subdirectory(qtoolbar)
add_subdirectory(qtoolbox)
add_subdirectory(qtreeview)
add_subdirectory(qstring)
add_subdirectory(qvariant)
add_subdirectory(qwidget)
add_subdirectory(qtimer)
